fix broken css for order page

--- a/app/styles/_my_dashboard.scss
+++ b/app/styles/_my_dashboard.scss
@@ -1,4 +1,4 @@
-.my_dashboard {
+.my_dashboard, .my_orders {
 
   @media #{$large-up} {
     &.row {
